gccida/g1/loc_descriptor_from_tree
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/loc_descriptor_from_tree/src/dwarf2out.c:8464:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/loc_descriptor_from_tree/src/dwarf2out.c:8472:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *inner_reference; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/loc_descriptor_from_tree/src/dwarf2out.c:8519:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode pmode; // [rsp+0h] [rbp-68h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/loc_descriptor_from_tree/src/dwarf2out.c:8935:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 8292, "loc_descriptor_from_tree"); 
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/loc_descriptor_from_tree/src/obj/dwarf2out.o] Error 1
